# IOT

./: .gitignore  README.md  start.ps1  start.sh  stop.ps1  stop.sh
sentry_agent/: .dockerignore  .gitignore  BACKEND_DOCS.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
sentry_agent/docker/mosquitto/: mosquitto.conf
sentry_agent/sentry/: __init__.py  __main__.py  agent.py  chat.py  config.py  event_classifier.py  models.py  orchestrator.py  prompt.py  storage.py  tools.py
sentry_agent/sentry/llm/: __init__.py  base.py  ollama.py
sentry_agent/sentry/mqtt/: __init__.py  bus.py  topics.py
sentry_agent/sentry/prompts/: chat.j2  event_evaluation.j2  system.j2
sentry_agent/sentry/sensors/: __init__.py  mock.py
sentry_agent/tests/: test_chat.py  test_classifier.py  test_mqtt.py  test_orchestrator.py  test_smoke.py  test_storage.py
sentry_agent/tests/fixtures/: 3am_back_door.json  7am_kitchen_motion.json  flapping_door.json
sentryagent_app/: MOBILE_DOCS.md  README.md  ROADMAP.md  SETUP.md  STATUS.md  SentryAgent_Project_Proposal.docx  pubspec.yaml
sentryagent_app/android/app/: build.gradle.kts
sentryagent_app/lib/: main.dart
sentryagent_app/lib/core/: format.dart  haptics.dart  providers.dart  transitions.dart
sentryagent_app/lib/core/theme/: app_colors.dart  app_shadows.dart  app_spacing.dart  app_theme.dart
sentryagent_app/lib/core/widgets/: connection_pill.dart  press_scale.dart  sensor_meta.dart  severity_pill.dart  soft_card.dart
sentryagent_app/lib/data/: broker_config.dart
(+25 files in other folders)
