[project]
name = "sentry_agent"
version = "0.1.0"
description = "SentryAgent — local-LLM home security agent. Receives sensor events, reasons about them, returns structured decisions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SentryAgent" }]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "aiomqtt>=2.3.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
sentry = "sentry.__main__:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
